fix overflow on mobile size at home page

--- a/styles/responsiveness/home.mobile.css
+++ b/styles/responsiveness/home.mobile.css
@@ -1,6 +1,7 @@
 @media (max-width: 379px) {
   .nav-bar {
     height: 15vh;
+    overflow: hidden;
   }
   .nav-links ul {
     display: flex;
